--- a/templates/accessibility_coming_soon.html
+++ b/templates/accessibility_coming_soon.html
@@ -1,20 +1,5 @@
-{% extends 'base.html' %}
-
-{% block title %}Accessibility Coming Soon{% endblock %}
-
+{% extends "base.html" %}
 {% block content %}
-<main role="main" class="container my-5">
-    <div class="row">
-        <div class="col-md-8 offset-md-2 text-center">
-            <div class="card shadow-sm p-5">
-                <i class="fas fa-wrench fa-5x text-info mb-4"></i>
-                <h1 class="display-4 fw-bold">Accessibility Features</h1>
-                <p class="lead">We're working hard to make this application accessible to everyone!</p>
-                <p>Our team is dedicated to implementing features that will enhance usability for all users, including those with disabilities. Please check back soon for updates.</p>
-                <hr class="my-4">
-                <a href="{{ url_for('index') }}" class="btn btn-primary btn-lg">Back to Home</a>
-            </div>
-        </div>
-    </div>
-</main>
+<h1 class="h4 mb-3">Accessibility Notes</h1>
+<p>Keyboard navigation and ARIA labels are being improved. Feedback welcome!</p>
 {% endblock %}
